// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ShopDropdown
    alertIsActive={false}
    closeShopDropdown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    openShopDropdown={[Function]}
    productLanding={
        Object {
            "description": "foo",
            "hideWholesaleBlock": false,
            "iceCreamDescription": "",
            "iceCreamProducts": Array [],
            "iceCreamTitle": "foo",
            "merchandiseDescription": "foo",
            "merchandiseProducts": Array [],
            "merchandiseTitle": "",
            "products": Array [],
            "subNavigation": true,
            "title": "foo",
            "wholesaleDescription": "foo",
            "wholesaleImage": Object {
              "fields": Object {
                "file": Object {
                  "url": "foo",
                },
              },
              "sys": Object {
                "id": "foo",
              },
            },
            "wholesaleTitle": "foo",
          }
    }
    shopDropdownIsOpen={false}
    shopOnlineDropdownIsOpen={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="absolute z-nav"
>
        <div
                className="w100 pt3 px4 bg-peach fixed drip"
        >
                <div
                        className="content-width mx-auto flex flex-row items-center justify-end"
                >
                        <div
                                className=""
                        >
                                <div
                                        className="flex flex-row justify-between mx-auto"
                                >
                                        
                                </div>
                        </div>
                </div>
        </div>
</div>,
      "className": "undefined relative",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 pt3 px4 bg-peach fixed drip"
>
          <div
                    className="content-width mx-auto flex flex-row items-center justify-end"
          >
                    <div
                              className=""
                    >
                              <div
                                        className="flex flex-row justify-between mx-auto"
                              >
                                        
                              </div>
                    </div>
          </div>
</div>,
        "className": "absolute z-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="content-width mx-auto flex flex-row items-center justify-end"
>
            <div
                        className=""
            >
                        <div
                                    className="flex flex-row justify-between mx-auto"
                        >
                                    
                        </div>
            </div>
</div>,
          "className": "w100 pt3 px4 bg-peach fixed drip",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className=""
>
                <div
                                className="flex flex-row justify-between mx-auto"
                >
                                
                </div>
</div>,
              null,
            ],
            "className": "content-width mx-auto flex flex-row items-center justify-end",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="flex flex-row justify-between mx-auto"
>
                  
</div>,
                "className": "",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [],
                  "className": "flex flex-row justify-between mx-auto",
                },
                "ref": null,
                "rendered": Array [],
                "type": "div",
              },
              "type": "div",
            },
            null,
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="absolute z-nav"
>
          <div
                    className="w100 pt3 px4 bg-peach fixed drip"
          >
                    <div
                              className="content-width mx-auto flex flex-row items-center justify-end"
                    >
                              <div
                                        className=""
                              >
                                        <div
                                                  className="flex flex-row justify-between mx-auto"
                                        >
                                                  
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "undefined relative",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 pt3 px4 bg-peach fixed drip"
>
            <div
                        className="content-width mx-auto flex flex-row items-center justify-end"
            >
                        <div
                                    className=""
                        >
                                    <div
                                                className="flex flex-row justify-between mx-auto"
                                    >
                                                
                                    </div>
                        </div>
            </div>
</div>,
          "className": "absolute z-nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="content-width mx-auto flex flex-row items-center justify-end"
>
              <div
                            className=""
              >
                            <div
                                          className="flex flex-row justify-between mx-auto"
                            >
                                          
                            </div>
              </div>
</div>,
            "className": "w100 pt3 px4 bg-peach fixed drip",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className=""
>
                  <div
                                    className="flex flex-row justify-between mx-auto"
                  >
                                    
                  </div>
</div>,
                null,
              ],
              "className": "content-width mx-auto flex flex-row items-center justify-end",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="flex flex-row justify-between mx-auto"
>
                    
</div>,
                  "className": "",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [],
                    "className": "flex flex-row justify-between mx-auto",
                  },
                  "ref": null,
                  "rendered": Array [],
                  "type": "div",
                },
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ShopDropdown
    alertIsActive={false}
    closeShopDropdown={[Function]}
    openShopDropdown={[Function]}
    productLanding={Object {}}
    shopDropdownIsOpen={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="absolute z-nav"
>
        <div
                className="w100 pt3 px4 bg-peach fixed drip"
        >
                <div
                        className="content-width mx-auto flex flex-row items-center justify-end"
                >
                        <div
                                className=""
                        >
                                <div
                                        className="flex flex-row justify-between mx-auto"
                                >
                                        
                                </div>
                        </div>
                </div>
        </div>
</div>,
      "className": "undefined relative",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 pt3 px4 bg-peach fixed drip"
>
          <div
                    className="content-width mx-auto flex flex-row items-center justify-end"
          >
                    <div
                              className=""
                    >
                              <div
                                        className="flex flex-row justify-between mx-auto"
                              >
                                        
                              </div>
                    </div>
          </div>
</div>,
        "className": "absolute z-nav",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="content-width mx-auto flex flex-row items-center justify-end"
>
            <div
                        className=""
            >
                        <div
                                    className="flex flex-row justify-between mx-auto"
                        >
                                    
                        </div>
            </div>
</div>,
          "className": "w100 pt3 px4 bg-peach fixed drip",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className=""
>
                <div
                                className="flex flex-row justify-between mx-auto"
                >
                                
                </div>
</div>,
              null,
            ],
            "className": "content-width mx-auto flex flex-row items-center justify-end",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="flex flex-row justify-between mx-auto"
>
                  
</div>,
                "className": "",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [],
                  "className": "flex flex-row justify-between mx-auto",
                },
                "ref": null,
                "rendered": Array [],
                "type": "div",
              },
              "type": "div",
            },
            null,
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="absolute z-nav"
>
          <div
                    className="w100 pt3 px4 bg-peach fixed drip"
          >
                    <div
                              className="content-width mx-auto flex flex-row items-center justify-end"
                    >
                              <div
                                        className=""
                              >
                                        <div
                                                  className="flex flex-row justify-between mx-auto"
                                        >
                                                  
                                        </div>
                              </div>
                    </div>
          </div>
</div>,
        "className": "undefined relative",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="w100 pt3 px4 bg-peach fixed drip"
>
            <div
                        className="content-width mx-auto flex flex-row items-center justify-end"
            >
                        <div
                                    className=""
                        >
                                    <div
                                                className="flex flex-row justify-between mx-auto"
                                    >
                                                
                                    </div>
                        </div>
            </div>
</div>,
          "className": "absolute z-nav",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="content-width mx-auto flex flex-row items-center justify-end"
>
              <div
                            className=""
              >
                            <div
                                          className="flex flex-row justify-between mx-auto"
                            >
                                          
                            </div>
              </div>
</div>,
            "className": "w100 pt3 px4 bg-peach fixed drip",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className=""
>
                  <div
                                    className="flex flex-row justify-between mx-auto"
                  >
                                    
                  </div>
</div>,
                null,
              ],
              "className": "content-width mx-auto flex flex-row items-center justify-end",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="flex flex-row justify-between mx-auto"
>
                    
</div>,
                  "className": "",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [],
                    "className": "flex flex-row justify-between mx-auto",
                  },
                  "ref": null,
                  "rendered": Array [],
                  "type": "div",
                },
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
